--- a/templates/luck_home.html
+++ b/templates/luck_home.html
@@ -14,6 +14,9 @@
         <button type="button">
             <a href="luck_start"> luck start</a>
         </button>
+        <button type="button">
+            <a href="luck_reset"> luck reset</a>
+        </button>
         {% if result %}
         <p style="text-align: center">新增成功</p>
         {% endif %}
