--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- <html lang="en"> -->
     <head>
         <meta charset="UTF-8">
         <title> Welcome </title>
     </head>
     <body>
         <form action="/welcome/" method="get">
-            <label for="user_name">您的名字</label>
+            <label for="user_name">Your name</label>
             <input id="user_name" type="text" name="user_name">
-            <input type="submit" value="進入網站">
+            <input type="submit" value="enter">
         </form>
     </body>
 </html>
