--- a/templates/look_home.html
+++ b/templates/look_home.html
@@ -14,9 +14,9 @@
         <button type="button">
             <a href="look_prize"> look prize</a>
         </button>
-        <button type="button">
+        <!-- <button type="button">
             <a href="all_member"> all member</a>
-        </button>
+        </button> -->
         <button type="button">
             <a href="luck_home"> luck home</a>
         </button>
