--- a/templates/luck_reset.html
+++ b/templates/luck_reset.html
@@ -9,6 +9,9 @@
     <div style="width: 210px;margin:0 auto">
         <form method="post">
             {% csrf_token %}
+            <label>Number of lottery members {{member_count}} </label>
+            <br><br>
+
             <label for="lottery_name">lottery name：</label>
             <input type="text" name="lottery_name" style="width: 150px"><br><br>
             <label for="prize_1">First prize：</label>
